--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,18 @@
 version: '3'
 services:
-  app :
-    image: python:alpine
+  crawler:
+    build:
+      dockerfile: ./crawler/Dockerfile
+    depends_on:
+      - db
   db:
     image: postgres
     environment:
-      - POSTGRES_USER=username
-      - POSTGRES_DB=database
-      - POSTGRES_PASSWORD=secret
-  jupyter:
-    image: jupyter/minimal-notebook
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=postgres
+      - POSTGRES_PASSWORD=postgres
+    ports:
+      - 5432
     restart: always
+    volumes:
+      - ./:./
